fixed extra space above results panel 	modified:   static/style.css 	modified:   templates/index.html

--- a/static/style.css
+++ b/static/style.css
@@ -241,7 +241,7 @@ body {
     display: none;
     position: relative;
     margin: 0 20px;
-    height: 70vh;
+    height: 90vh;
 }
 
 #results2024Table {
@@ -583,6 +583,7 @@ body {
     #resultsPanel {
         width: 100vw;
         padding: 5%;
+        height: 100%;
     }
     
     #results {
